# imgui_bundle_online

./: .gitignore  .gitmodules  README.md  claude.md  justfile  pyodide_dist
min_bundle_pyodide_app/: min_app.html  pyodide_helper.js
projects/bundle_tutorial/: justfile
projects/bundle_tutorial/single_page_book_app/: index.html  package-lock.json  package.json  pyodide_dist
projects/bundle_tutorial/single_page_book_app/resources_singlepage/: app.js  canvas_drag.js  code_editor.js  page_loader.js  page_sections.js  pyodide_helper.js  style.css
projects/daft_lib_test/: min_app_min.html
projects/daft_lib_test/daft_lib_package_pyodide/: meta.yaml  test_page.html
projects/daft_lib_test/daft_lib_package_pyodide/daft_lib_src/: CMakeLists.txt  daft_lib.cpp  pyproject.toml
projects/imgui_bundle_playground/: index.html  justfile
projects/imgui_bundle_playground/examples/: _initial_code.py  dem_immvision_process.py  demo_docking.py  examples.json  haiku_butterfly.py  implot3d_demo_link.py  implot_demo_link.py
projects/imgui_bundle_playground/js/: pyodide_loader.js
projects/min_bundle_pyodide_app/: demo_butterfly.html  demo_butterfly.source.txt  demo_heart.html  demo_heart.source.txt  pyodide_dist
projects/pyodide_web_demo/js/: pyodide_loader.js
repositories/: fiatlight  imgui_bundle
scripts/: build_bundle_pyodide_remote.sh  sync_pyodide_dist.sh
single_page_book_app/: index.html
single_page_book_app/resources_singlepage/: app.js  code_editor.js  style.css
